--- a/homework.html
+++ b/homework.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="shortcut icon">
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/png" href="images/logo_icon.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&display=swap" rel="stylesheet">
