--- a/homework.html
+++ b/homework.html
@@ -1,20 +1,18 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon">
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/png" href="images/logo_icon.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/starter.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="shortcut icon" type="image/png" href="images/logo_icon.png"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Slick Company</title>
   </head>
   <body>
     <a class = "skip">Skip to Main Content</a>
-    <header class="top-header">
+    <header>
       <img src="images/logo.png" alt="" id = "logo">
       <nav>
         <ul class="nav_links">
