--- a/homework.html
+++ b/homework.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/starter.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="shortcut icon" type="image/png" href="images/logo_icon.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Slick Company</title>
   </head>
   <body>
     <a class = "skip">Skip to Main Content</a>
-    <header>
+    <header class = "top-header">
       <img src="images/logo.png" alt="" id = "logo">
       <nav>
         <ul class="nav_links">
